<resources>
    <string name="app_name">Style Omega</string>
    <string name="user_name">User Name</string>
    <string name="password_">Password</string>
    <string name="signup">Sign Up Here</string>
    <string name="login">Login</string>
    <string name="username">User Name</string>
    <string name="register">REGISTER</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="name">Name</string>
    <string name="email">E-Mail</string>
    <string name="contact_number">PhoneNumber</string>
    <string name="age">Age</string>
    <string name="dob">DOB</string>
    <string name="update">Update Profile</string>
    <string name="edit">Edit Profile</string>
    <string name="Description">Description</string>
    <string name="Price">Price</string>
    <string name="Quantity">Quantity</string>
    <string name="Condition">Condition</string>
    <string name="WishList">Wish List</string>
    <string name="Buy">Buy It</string>

    <string name="all">ALL</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="Add">Add To Cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">Style Omega</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_hometab">Hometab</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
</resources>
