<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="528dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="match_parent"
                    android:layout_height="298dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:layout_below="@+id/price"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="16dp"
                    android:layout_toEndOf="@+id/textView3"
                    android:text="@string/name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView4"
                    android:layout_alignBottom="@+id/textView4"
                    android:layout_toEndOf="@+id/textView4"
                    android:text="@string/Price"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/imageView7"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="monospace"
                    android:text="TextView"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/allquantity"
                    android:text="@string/Add" />

                <TextView
                    android:id="@+id/qname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignTop="@+id/allquantity"
                    android:layout_marginEnd="20dp"
                    android:layout_toStartOf="@+id/allquantity"
                    android:text="Quantity" />

                <EditText
                    android:id="@+id/allquantity"
                    android:layout_width="65dp"
                    android:layout_height="42dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/name"
                    android:layout_marginEnd="26dp"
                    android:ems="10"
                    android:inputType="number" />

                <Button
                    android:id="@+id/buy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/WishList" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/name"
                    android:layout_alignBottom="@+id/name"
                    android:layout_alignStart="@+id/description"
                    android:text="Catagory" />

                <Button
                    android:id="@+id/button2"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignBottom="@+id/imageView7"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/share_symbol" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/textView3"
                    android:layout_below="@+id/description"
                    android:layout_marginTop="14dp"
                    android:text="Rs."
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="24sp" />


            </RelativeLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/card_view"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="14dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="10dp"
                    android:text="Product Discription"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/longDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/textView5"
                    android:layout_below="@+id/textView5"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="Description goes here"
                    android:textSize="16sp" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>


</ScrollView>